<resources>
    <string name="app_name">ClassCloud</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Recursos agregados -->
    <string name="btIniciarSesion">Iniciar Sesion</string>
    <string name="btSalir">Salir</string>
    <string name="btCrearMateria">Crear Materia</string>
    <string name="btAsignarProfesor">Asignar Profesor</string>
    <string name="btVolver">Volver</string>
    <string name="btVerMaterias">Ver materias</string>
    <string name="btModificarMaterias">Modificar Materias</string>
    <string name="btGuardarMateria">Guardar Materia</string>
    <string name="nombreMateria">Nombre Materia</string>
    <string name="profesorMateria">Profesor Asignado</string>
    <string name="btInscripciones">Ver Inscripciones</string>
    <string name="btEvaluaciones">Ver Evaluaciones</string>
    <string name="btGuardarEvaluacion">Guardar Evaluacion</string>
    <string name="btVerEvaluaciones">Ver fechas de exámenes y trabajos</string>
    <string name="btGuardarNota">Guardar nota</string>
    <string name="btVerNotas">Ver notas</string>
    <string name="btVerNotasPromedio">Ver mis notas y promedio</string>
    <string name="btVerAsistencia">Ver asistencias</string>
    <string name="btAgregarProfesor">Agregar Profesor</string>
    <string name="btGuardar">Guardar</string>
    <string name="btVerMateriasAsig">Ver materias asignadas</string>
    <string name="btCrearEvaluaciones">Crear Evaluaciones</string>
    <string name="btCalificaciones">Cargar Calificaciones</string>
    <string name="btAsistencias">Controlar Asistencias</string>
    <string name="rbProfesor">Profesor</string>
    <string name="rbAlumno">Alumno</string>
    <string name="btFecha">Seleccionar fecha</string>
    <string name="btGuardarAsistencia">Guardar asistencia</string>
    <string name="noprofes">No hay profesores cargados</string>
    <string name="agrUsuario">Agregar Usuario</string>
    <string name="mtrNombre">Ingrese el nombre de la materia</string>
    <string name="mtrCreadaCo">Materia creada correctamente</string>
    <string name="mtrError">Error al crear la materia: </string>
    <string name="comCampos">Complete todos los campos</string>
    <string name="nomExistente">Ya existe un usuario con ese nombre</string>
    <string name="usuarioCreado">Usuario (%1$s) creado correctamente</string>
    <string name="noProfesDis">No hay profesores disponibles</string>
    <string name="materiaAct">Materia actualizada correctamente</string>
    <string name="materiaEli">Materia eliminada</string>
    <string name="errorIdAlumno">Error: no se encontró el ID del alumno</string>
    <string name="yaInscripto">Ya estás inscripto en esta materia</string>
    <string name="inscEn">Inscribirse en </string>
    <string name="deseaIns">¿Deseás inscribirte en esta materia?</string>
    <string name="inscRealizada">Inscripción realizada</string>
    <string name="noInscripto">No estás inscripto en ninguna materia.</string>
    <string name="matInscriptas">Mis materias inscriptas</string>
    <string name="sinEvalsProg">Sin evaluaciones programadas.</string>
    <string name="evalsProx">Evaluaciones próximas</string>
    <string name="noNotasReg">No tenés notas registradas</string>
    <string name="tusNotas">📚 Tus calificaciones:</string>
    <string name="prom"> (Promedio: </string>
    <string name="nota">   - Nota: </string>
    <string name="notYProm">Mis notas y promedios</string>
    <string name="noAsistReg">No hay asistencias registradas</string>
    <string name="histAsist">📅 Historial de asistencias:</string>
    <string name="misAsist">Mis asistencias</string>
    <string name="compCampos">Complete todos los campos</string>
    <string name="bienvenido">Bienvenido </string>
    <string name="rolDesconocido">Rol desconocido</string>
    <string name="datosIncorrectos">Usuario o contraseña incorrectos</string>
    <string name="errorProfesor">Error: no se pudo identificar al profesor</string>
    <string name="bienvenidoProfe">Bienvenido, %1$s</string>
    <string name="noMateriasAsig">No tenés materias asignadas.</string>
    <string name="misMaterias">Mis materias</string>
    <string name="errorIdProfe">Error: no se encontró el ID del profesor</string>
    <string name="fecha">Fecha: %1$s</string>
    <string name="selecMatYalum">Seleccioná materia y alumno</string>
    <string name="selecFecha">Seleccioná una fecha</string>
    <string name="asisRegCorrect">Asistencia registrada correctamente</string>
    <string name="fechaNoSelec">Fecha no seleccionada</string>
    <string name="asisReg">Asistencias Registradas</string>
    <string name="cerrar">Cerrar</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="tarde">Tarde</string>
    <string name="alumDesconocido">Alumno desconocido</string>
    <string name="noAlumnosIns">No hay alumnos inscriptos en esta materia</string>
    <string name="ingNota">Ingrese una nota</string>
    <string name="ingNumValido">Ingrese un número válido</string>
    <string name="calGuardada">Calificación guardada correctamente</string>
    <string name="noMatsDisp">No hay materias disponibles</string>
    <string name="ingresDesc">Ingrese una descripción</string>
    <string name="evalGuardadaCorrect">Evaluación guardada correctamente</string>
    <string name="noEvalsRegis">No hay evaluaciones registradas para tus materias.</string>
    <string name="noCalReg">No hay calificaciones registradas para tus materias.</string>
    <string name="txEvaluacionesProfesor">Evaluaciones del Profesor</string>
    <string name="txNotasRegistradas">Notas Registradas</string>
    <string name="txFechaNoSeleccionada">Fecha no seleccionada</string>
    <string name="txMateriasDisponibles">Materias Disponibles</string>
    <string name="txNuevoUsuario">Agregar Usuario</string>
    <string name="txControlarAsistencias">Controlar Asistencias</string>
    <string name="materia_con_profesor">%1$s (Profesor/a: %2$s)</string>
    <string name="titulo_modificar_materia">Modificar materia: %1$s</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
</resources>