<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alumno.AlumnoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lyAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/txMateriasDisponibles"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/listMaterias"
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:layout_weight="1" />

            <android.widget.Button
                android:id="@+id/btVerInscripciones"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:text="@string/btInscripciones" />

            <android.widget.Button
                android:id="@+id/btVerEvaluaciones"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/btVerEvaluaciones" />

            <android.widget.Button
                android:id="@+id/btVerNotas"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/btVerNotasPromedio" />

            <android.widget.Button
                android:id="@+id/btnVerAsistencias"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/btVerAsistencia" />


            <android.widget.Button
                android:id="@+id/btVolver"
                style="@style/DarkMutedButton"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/btVolver" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>