<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profesor.ProfeActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/LyProfe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:text="Panel del Profesor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.widget.Button
            android:id="@+id/btVerMaterias"
            style="@style/MyCustomButton"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="250dp"
            android:text="@string/btVerMateriasAsig" />

        <android.widget.Button
            android:id="@+id/btEvaluaciones"
            style="@style/MyCustomButton"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="250dp"
            android:text="@string/btCrearEvaluaciones" />

        <android.widget.Button
            android:id="@+id/btCalificaciones"
            style="@style/MyCustomButton"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="250dp"
            android:text="@string/btCalificaciones" />

        <android.widget.Button
            android:id="@+id/btAsistencias"
            style="@style/MyCustomButton"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="250dp"
            android:text="@string/btAsistencias" />

        <android.widget.Button
            android:id="@+id/btVolver"
            style="@style/DarkMutedButton"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="200dp"
            android:text="@string/btVolver" />
    </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>