<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.profesor.ProfesorAsistenciasActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txControlarAsistencias"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerMateria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinnerAlumno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvFechaSeleccionada"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/txFechaNoSeleccionada" />

            <android.widget.Button
                android:id="@+id/btFecha"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/btFecha" />

            <android.widget.Button
                android:id="@+id/btnGuardarAsistencia"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/btGuardarAsistencia" />

            <android.widget.Button
                android:id="@+id/btnVerAsistencias"
                style="@style/MyCustomButton"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/btVerAsistencia" />

            <android.widget.Button
                android:id="@+id/btVolver"
                style="@style/DarkMutedButton"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:text="@string/btVolver" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
