<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.CrearMateriaActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/nombreMateria"
            style="@style/ModernInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreMateria"
            android:layout_marginTop="25dp"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spinnerProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp" />

        <android.widget.Button
            android:id="@+id/btGuardarMateria"
            style="@style/MyCustomButton"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:layout_width="250dp"
            android:text="@string/btGuardarMateria" />

        <android.widget.Button
            android:id="@+id/btVolver"
            style="@style/DarkMutedButton"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/btVolver" />
    </LinearLayout>

    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>