<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etMateria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Materia"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Tipo (Examen / Trabajo)"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Descripción"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Fecha (YYYY-MM-DD)"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btGuardarEval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btColor"
            android:text="@string/btGuardarEvaluacion" />

        <Button
            android:id="@+id/btVerEval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/btColor"
            android:text="@string/btEvaluaciones" />

        <Button
            android:id="@+id/btVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/btColor"
            android:text="@string/btVolver" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>